nova_tests/plan101_1/negative/lowercase_prefix_neg.nv
// C7 — lowercase generic name `fn[t]` → parse error / convention error.
//
// EXPECT_COMPILE_ERROR

module negative.lowercase_prefix_neg

fn[t] t @bad() -> t => @

test "should error" {
    assert(1 == 1)
}
